--- a/src-gwt/org/opencms/gwt/client/ui/css/imageSprites.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/imageSprites.css
@@ -297,6 +297,9 @@
 
 @sprite table tr td.warningBigIcon, div.warningBigIcon, span.warningBigIcon{
 	gwt-image: "warningBigImage";
+	display: inline-block;
+	width: 32px;
+	height: 32px;
 }
 
 @sprite div.directoryIcon, span.directoryIcon{
